--- a/.classpath
+++ b/.classpath
@@ -20,7 +20,11 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/googledrive/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/googledrive/google-api-client-1.22.0.jar"/>
-	<classpathentry kind="lib" path="lib/googledrive/google-api-services-drive-v3-rev52-1.22.0.jar"/>
+	<classpathentry kind="lib" path="lib/googledrive/google-api-services-drive-v3-rev52-1.22.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/StrongBox/lib/googledrive/javadoc/google-api-services-drive-v3-rev52-1.22.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/googledrive/google-http-client-1.22.0.jar"/>
 	<classpathentry kind="lib" path="lib/googledrive/google-oauth-client-1.22.0.jar"/>
 	<classpathentry kind="lib" path="lib/googledrive/jsr305-1.3.9.jar"/>
